--- a/javaproject/src/main/resources/application.properties
+++ b/javaproject/src/main/resources/application.properties
@@ -1,23 +1,10 @@
-spring.application.name=javaproject
-# ===============================================
-# MySQL 데이터베이스 연결 정보
-# ===============================================
+# Railway DB 연결 정보
+spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:21559/railway
+spring.datasource.username=root
+# 비밀번호를 코드에서 분리
+# 비밀번호를 코드에서 분리
+spring.datasource.password=PJlszfYWZYlPrSNNOBtWghAqleuKtHEG
 
-# 접속할 DB의 주소입니다. (mydatabase는 아까 만든 DB 이름)
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?serverTimezone=Asia/Seoul
-
-# DB에 접속할 때 사용할 사용자 이름입니다.
-spring.datasource.username=myuser
-
-# DB에 접속할 때 사용할 비밀번호입니다.
-spring.datasource.password=mypassword
-
-# Spring이 MySQL과 통신하는 방법을 알려주는 설정입니다.
+# (이하는 기존과 동일)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# ===============================================
-# JPA 설정 (데이터베이스 자동 관리)
-# ===============================================
-
-# Java 클래스(Entity)를 기반으로 DB 테이블을 자동으로 생성/변경해주는 매우 편리한 기능입니다.
 spring.jpa.hibernate.ddl-auto=update
