--- a/javaproject/src/main/resources/application.properties
+++ b/javaproject/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.password=PJlszfYWZYlPrSNNOBtWghAqleuKtHEG
 # (이하는 기존과 동일)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# ======== ⭐ [시작] Cloudinary 설정 추가 ========
+# 1단계에서 확인한 본인의 값으로 변경하세요
+cloudinary.cloud_name=dwg49zkn2
+cloudinary.api_key=884996793853215
+cloudinary.api_secret=7koRi6eGUZRkxZuU-j7PQtPxSL0
+# ======== ⭐ [끝] Cloudinary 설정 추가 ========
