구매후 물품받기 페이지, 개인정보 수정페이지, 어드민 페이지, 구매상태, DB history값추가, 메인 카테고리 추가

--- a/javaproject/build.gradle
+++ b/javaproject/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+
+    // ⭐ [추가] 웹소켓 라이브러리
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 tasks.named('test') {
