프로퍼티값 변경

--- a/javaproject/src/main/resources/application.properties
+++ b/javaproject/src/main/resources/application.properties
@@ -1,16 +1,24 @@
-# Railway DB 연결 정보
-spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:21559/railway
-spring.datasource.username=root
-# 비밀번호를 코드에서 분리
-spring.datasource.password=PJlszfYWZYlPrSNNOBtWghAqleuKtHEG
+spring.application.name=javaproject
 
-# (이하는 기존과 동일)
+# ===============================================
+# MySQL 데이터베이스 연결
+# ===============================================
+
+# Railway 배포 시: Railway가 자동으로 넣어주는 MYSQLHOST, MYSQLPORT 등을 사용
+# 로컬 실행 시: 환경변수 설정이 없으면 뒤에 적힌 기본값(localhost 등) 사용
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:railway}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
 
-# ======== ⭐ [시작] Cloudinary 설정 추가 ========
-# 1단계에서 확인한 본인의 값으로 변경하세요
-cloudinary.cloud_name=dwg49zkn2
-cloudinary.api_key=884996793853215
-cloudinary.api_secret=7koRi6eGUZRkxZuU-j7PQtPxSL0
-# ======== ⭐ [끝] Cloudinary 설정 추가 ========
+# JPA 설정
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# ===============================================
+# Cloudinary 설정 (이미지 업로드)
+# ===============================================
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
